# mcacc

./: .gitignore  Doxyfile  Makefile.am  README.md  TODO.txt  autogen.sh  configure.ac  install.ubuntu  mca.htm  scrub-clean.sh
assets/: mcacc.htm
icons/: mca.desktop
scripts/: Makefile.am  financials.sh  mca-yfetch.sh  mca.sh  mcacc-env.sh  mcacc-reports.sh  nass.sh  posts.sh  returns.sh  snap-XXX.sh  snap.sh
src/: .gitignore  Makefile.am  args.cc  args.hpp  assets.cc  assets.hpp  autotypes.tcl  cc.m4  centis.cc  centis.hpp  cgt.cc  cgt.hpp  comm.cc  comm.hpp  comm.m4  common.cc  common.h  common.hpp  common.m4  cpp.m4  cpq.cc  cpq.hpp  dec.cc  dec.hpp  epics.cc  epics.hpp  etb.cc  etb.hpp  etran.cc  etran.hpp  etrans-aug.cc  etrans-aug.hpp  gaap.cc  gaap.hpp  hpp.m4  inputs.cc  inputs.hpp  m5  mcacc.1  mcacc.cc  (+33 more)
